--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 /* header */
 
 header{
-    height: 150px;
+    height: auto;
     background-color: black;
     color: white;
     width: 100%;
